--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^0.28.11",
     "node-sass": "^4.9.0",
     "react-router-dom": "^4.3.1",
+    "react-table": "^6.8.6",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
