--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.10",
     "node-fetch": "^2.1.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
